--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,6 @@
 {
-  "buildCommand": "npm run build --workspace=packages/web",
+  "buildCommand": "cd packages/web && npm install && npm run build",
   "outputDirectory": "packages/web/dist",
-  "devCommand": "npm run web",
   "installCommand": "npm install",
   "framework": "vite",
   "rewrites": [
